Completed the template

--- a/index.html
+++ b/index.html
@@ -227,161 +227,38 @@
                         </div>
                     </article>
                 </section>
-
-            <!-- SIXTH SECTION -->
-            <section>
-                <article>
-                    <p><a href="">www.downloadtechitems.com</a></p>
-                    <div>
-                        <div>
-                            <img src="" alt="">
-                        </div>
-                    </div>
-                    <div>
-                        <p>Questions</p>
-                        <h2>Most Common Question?</h2>
-                        <div>
-                            <div>
-                                <h4>What are the things i need to know?</h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos esse pariatur ut repudiandae explicabo nisi alias consequuntur delectus animi velit id itaque illo ipsa, eligendi deleniti deserunt veritatis nemo aspernatur?
-                                </p>
-                            </div>
-                            <div>
-                                <h4>Best Tech Skills to Learn</h4>
-                            </div>
-                            <div>
-                                <h4>Best Tech Skills to Learn</h4>
-                            </div>
-                            <div>
-                                <h4>Best Tech Skills to Learn</h4>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-            </section>
-
-            <!-- SEVENTH SECTION -->
-            <section>
-                <article>
-                    <p>Testimonies</p>
-                    <h2>What Our Client's Say About Us</h2>
-                    <div>
-                        <div>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium error amet animi debitis?
-                            </p>
-                            <div>
-                                <div>
-                                    <img src="" alt="">
-                                </div>
-                                <div>
-                                    <h4>Lorem ipsum.</h4>
-                                    <p>Lorem, ipsum dolor.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium error amet animi debitis?
-                            </p>
-                            <div>
-                                <div>
-                                    <img src="" alt="">
-                                </div>
-                                <div>
-                                    <h4>Lorem ipsum.</h4>
-                                    <p>Lorem, ipsum dolor.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-            </section>
-
-            <!-- EIGHT SECTION -->
-            <section>
-                <article>
-                    <p>Lorem, ipsum.</p>
-                    <div>
-                    <h3>Lorem ipsum dolor sit.</h3> 
-                    <p><a href="">Learn More</a></p>
-                    </div>
-                    
-                    <div>
-                        <div>
-                            <img src="" alt="">
-                        </div>
-                        <p>Lorem, ipsum.</p>
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                        <div>
-                            <div>
-                                <img src="" alt="">
-                            </div>
-                            <div>
-                                <p>Lorem.</p>
-                                <p><strong>Lorem.</strong></p>
-                            </div>
-                            <p><a href="">Explore</a></p>
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                            <div>
-                                <img src="" alt="">
-                            </div>
-                            <div>
-                                <p>Lorem, ipsum.</p>
-                                <h4>Lorem ipsum dolor sit consectetur.</h4>
-                                <div>
-                                    <div>
-                                        <img src="" alt="">
-                                    </div>
-                                    <p>Lorem.</p>
-                                    <p><strong>Lorem, ipsum.</strong></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <img src="" alt="">
-                            </div>
-                            <div>
-                                <p>Lorem, ipsum.</p>
-                                <h4>Lorem ipsum dolor sit consectetur.</h4>
-                                <div>
-                                    <div>
-                                        <img src="" alt="">
-                                    </div>
-                                    <p>Lorem.</p>
-                                    <p><strong>Lorem, ipsum.</strong></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <article>
-                        <p>Lorem, ipsum.</p>
-                        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
-                        <p><a href="">Inquire</a></p>
-                    </article>
-                </article>
-            </section>
-        </main>
-
+            
     <!-- FOOTER SECTION -->
-    <footer>
-        <article>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+    <footer id="foot">
+        <article id="footer">
+            <div id="footer1">
+                <h4>About Us</h4><br>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi deleniti laboriosam quas, aliquam voluptatibus quod corrupti recusandae pariatur quam nihil et facere rerum quaerat repellat saepe quae, asperiores molestiae distinctio.
+                </p><br>
+                <p>
+                    <strong>+123-123+1234</strong>
+                </p><br><br>
+            </div>
+            <div id="footer2">
+                <h4>Service</h4><br>
+                <ul>
+                    <li>Contact Us</li>
+                    <li>Press</li>
+                    <li>Work with us</li>
+                    <li>Terms and Conditions</li>
+                </ul><br>
+            </div>
+            <div id="footer3">
+                <h4>Support</h4><br>
+                <ul>
+                    <li>Help Center</li>
+                    <li>FAQ</li>
+                    <li>Contact Us</li>
+                    <li>Forum</li>
+                </ul><br>
+            </div>
         </article>
-        <div>
-            <p>Lorem ipsum dolor sit.</p>
-            <p>Lorem ipsum dolor sit.</p>
-        </div>
     </footer>
 </body>
 </html>
